testsuite/tests/typing-safe-linking/b_bad.compilers.reference
File "b_bad.ml", line 5, characters 29-62:
5 | let f : string A.t -> unit = function A.X s -> print_endline s
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error (warning 8 [partial-match]): this pattern-matching is not exhaustive.
Here is an example of a case that is not matched:
Y

File "b_bad.ml", line 9, characters 11-14:
9 | let () = f A.y
               ^^^
Error: Unbound value "A.y"
